--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sudoku</title>
-</head>
-<body>
-    
-
-
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
-</body>
+  </head>
+  <header>
+      <h1>Sudoku</h1>
+  </header>
+  <body>
+
+  </body>
+  <footer>
+
+  </footer>
 </html>
