--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
     <script src="app.js"></script>
   </head>
   <header>
-      <h1>Sudoku</h1>
+    <h1>Sudoku</h1>
+    <div id="setup-game">
+      <div id="diff">
+        <h3>Choose Difficulty: </h3>
+        <label>Easy</label>
+        <label>Medium</label>
+        <label>Hard</label>
+      </div>
+      <div id="time">
+        <h3>Choose Time: </h3>
+      </div>
+      <div id="theme">
+        <h3>Choose Theme: </h3>
+      </div>
+    </div>
   </header>
-  <body>
-
-  </body>
-  <footer>
-
-  </footer>
+  <body></body>
+  <footer></footer>
 </html>
