--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <div id="setup-game">
       <div id="diff">
         <h3>Choose Difficulty: </h3>
-        <label>Easy</label>
-        <label>Medium</label>
-        <label>Hard</label>
+        <label><input id="diff-1" type="radio" name="diff" value="easy" checked >Easy</label>
+        <label><input id="diff-2" type="radio" name="diff" value="medium"> Medium</label>
+        <label><input id="diff-3" type="radio" name="diff" value="hard"> Hard</label>
       </div>
       <div id="time">
         <h3>Choose Time: </h3>
+        <label>3 Min</label>
+        <label>5 Min</label>
+        <label>10 Min</label>
       </div>
       <div id="theme">
         <h3>Choose Theme: </h3>
+        <label>Light</label>
+        <label>Dark</label>
       </div>
     </div>
   </header>
