--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
       </div>
       <div id="time">
         <h3>Choose Time: </h3>
-        <label>3 Min</label>
-        <label>5 Min</label>
-        <label>10 Min</label>
+        <label><input id="time-1" type="radio" name="time" value="three" checked> 3 Min</label>
+        <label><input id="time-2" type="radio" name="time" value="five" >5 Min</label>
+        <label><input id="time-3" type="radio" name="time" value="ten" >10 Min</label>
       </div>
       <div id="theme">
         <h3>Choose Theme: </h3>
-        <label>Light</label>
-        <label>Dark</label>
+        <label><input id="theme-1" type="radio" name="theme" value="light" checked>Light </label>
+        <label><input id="theme-2" type="radio" name="theme" value="dark">Dark</label>
       </div>
     </div>
+    <button id="start-btn">Create New Game!!</button>
   </header>
-  <body></body>
+  <body>
+      <div id="stats">
+          <p id="timer"></p>
+          <p id="lives"></p>
+      </div>
+  </body>
   <footer></footer>
 </html>
